--- a/ScheduleWorker/ScheduleWorker.csproj
+++ b/ScheduleWorker/ScheduleWorker.csproj
@@ -23,8 +23,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
     <PackageReference Include="PuppeteerSharp" Version="7.1.0" />
+    <PackageReference Include="Telegram.Bot" Version="18.0.0" />
+    <PackageReference Include="XAct.Core.PCL" Version="0.0.5014" />
     <PackageReference Include="xunit" Version="2.4.2" />
   </ItemGroup>
 
