Created TelegramBot - WIP What has been done: - Added telegram.bot using minimal API and Ngrok - Added ArgumentExtractorService for extracting arguments from Telegram.Update - Added modified implementation of Chain of Responsibilty pattern to manage complex conditions for executing different commands. - Added ChainStorage to store ChainMembers and ChainFactory to create a chain from of them. - Added GroupSearchPipeline and MessageSender: two services of business logic - Created a set of commands and chain members - Added User model - Added script for JsScriptLibrary

--- a/TelegramBot/appsettings.Development.json
+++ b/TelegramBot/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=rogEvotoZ1002;Database=ReaSchedule.dev;"
   }
 }
