--- a/TelegramBot/appsettings.json
+++ b/TelegramBot/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BotConfiguration": {
+    "BotToken": "5491712558:AAEZtkL5uiBKrms_kffCf4RxGaJipOuAg5M",
+    "HostAddress": "https://b52e-31-146-95-70.eu.ngrok.io"
+  },
+  
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=rogEvotoZ1002;Database=ReaSchedule.dev;"
+  }
+
 }
