--- a/ScheduleWorker/ScheduleWorker.csproj
+++ b/ScheduleWorker/ScheduleWorker.csproj
@@ -35,4 +35,6 @@
     <ProjectReference Include="..\ReaSchedule.DAL\ReaSchedule.DAL.csproj" />
     <ProjectReference Include="..\ReaSchedule.Models\ReaSchedule.Models.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="https://docs.gradle.com/enterprise/admin/schema/gradle-enterprise-config-schema-5.json" /></VisualStudio></ProjectExtensions>
 </Project>
