Refactoring + setting up of  web deploy - WIP Trying to change commit

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,88 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /ScheduleWorker/.local-chromium/Win64-970485/chrome-win
+/.local-chromiums/chrome-win/vulkan-1.dll
+/.local-chromiums/chrome-win/vk_swiftshader_icd.json
+/.local-chromiums/chrome-win/vk_swiftshader.dll
+/.local-chromiums/chrome-win/v8_context_snapshot.bin
+/.local-chromiums/chrome-win/resources.pak
+/.local-chromiums/chrome-win/notification_helper.exe
+/.local-chromiums/chrome-win/nacl_irt_x86_64.nexe
+/.local-chromiums/chrome-win/nacl_irt_x86_32.nexe
+/.local-chromiums/chrome-win/nacl64.exe
+/.local-chromiums/chrome-win/mojo_core.dll
+/.local-chromiums/chrome-win/libGLESv2.dll
+/.local-chromiums/chrome-win/libEGL.dll
+/.local-chromiums/chrome-win/interactive_ui_tests.exe
+/.local-chromiums/chrome-win/icudtl.dat
+/.local-chromiums/chrome-win/First Run
+/.local-chromiums/chrome-win/eventlog_provider.dll
+/.local-chromiums/chrome-win/elevation_service.exe
+/.local-chromiums/chrome-win/D3DCompiler_47.dll
+/.local-chromiums/chrome-win/chrome_pwa_launcher.exe
+/.local-chromiums/chrome-win/chrome_proxy.exe
+/.local-chromiums/chrome-win/chrome_elf.dll
+/.local-chromiums/chrome-win/chrome_200_percent.pak
+/.local-chromiums/chrome-win/chrome_100_percent.pak
+/.local-chromiums/chrome-win/chrome.exe
+/.local-chromiums/chrome-win/chrome.dll
+/.local-chromiums/chrome-win/100.0.4889.0.manifest
+/.local-chromiums/chrome-win/swiftshader/libGLESv2.dll
+/.local-chromiums/chrome-win/swiftshader/libEGL.dll
+/.local-chromiums/chrome-win/MEIPreload/preloaded_data.pb
+/.local-chromiums/chrome-win/MEIPreload/manifest.json
+/.local-chromiums/chrome-win/locales/zh-TW.pak
+/.local-chromiums/chrome-win/locales/zh-CN.pak
+/.local-chromiums/chrome-win/locales/vi.pak
+/.local-chromiums/chrome-win/locales/uk.pak
+/.local-chromiums/chrome-win/locales/tr.pak
+/.local-chromiums/chrome-win/locales/th.pak
+/.local-chromiums/chrome-win/locales/te.pak
+/.local-chromiums/chrome-win/locales/ta.pak
+/.local-chromiums/chrome-win/locales/sw.pak
+/.local-chromiums/chrome-win/locales/sv.pak
+/.local-chromiums/chrome-win/locales/sr.pak
+/.local-chromiums/chrome-win/locales/sl.pak
+/.local-chromiums/chrome-win/locales/sk.pak
+/.local-chromiums/chrome-win/locales/ru.pak
+/.local-chromiums/chrome-win/locales/ro.pak
+/.local-chromiums/chrome-win/locales/pt-PT.pak
+/.local-chromiums/chrome-win/locales/pt-BR.pak
+/.local-chromiums/chrome-win/locales/pl.pak
+/.local-chromiums/chrome-win/locales/nl.pak
+/.local-chromiums/chrome-win/locales/nb.pak
+/.local-chromiums/chrome-win/locales/ms.pak
+/.local-chromiums/chrome-win/locales/mr.pak
+/.local-chromiums/chrome-win/locales/ml.pak
+/.local-chromiums/chrome-win/locales/lv.pak
+/.local-chromiums/chrome-win/locales/lt.pak
+/.local-chromiums/chrome-win/locales/ko.pak
+/.local-chromiums/chrome-win/locales/kn.pak
+/.local-chromiums/chrome-win/locales/ja.pak
+/.local-chromiums/chrome-win/locales/it.pak
+/.local-chromiums/chrome-win/locales/id.pak
+/.local-chromiums/chrome-win/locales/hu.pak
+/.local-chromiums/chrome-win/locales/hr.pak
+/.local-chromiums/chrome-win/locales/hi.pak
+/.local-chromiums/chrome-win/locales/he.pak
+/.local-chromiums/chrome-win/locales/gu.pak
+/.local-chromiums/chrome-win/locales/fr.pak
+/.local-chromiums/chrome-win/locales/fil.pak
+/.local-chromiums/chrome-win/locales/fi.pak
+/.local-chromiums/chrome-win/locales/fa.pak
+/.local-chromiums/chrome-win/locales/et.pak
+/.local-chromiums/chrome-win/locales/es.pak
+/.local-chromiums/chrome-win/locales/es-419.pak
+/.local-chromiums/chrome-win/locales/en-XA.pak
+/.local-chromiums/chrome-win/locales/en-US.pak
+/.local-chromiums/chrome-win/locales/en-GB.pak
+/.local-chromiums/chrome-win/locales/el.pak
+/.local-chromiums/chrome-win/locales/de.pak
+/.local-chromiums/chrome-win/locales/da.pak
+/.local-chromiums/chrome-win/locales/cs.pak
+/.local-chromiums/chrome-win/locales/ca.pak
+/.local-chromiums/chrome-win/locales/bn.pak
+/.local-chromiums/chrome-win/locales/bg.pak
+/.local-chromiums/chrome-win/locales/ar.pak
+/.local-chromiums/chrome-win/locales/ar-XB.pak
+/.local-chromiums/chrome-win/locales/am.pak
