--- a/REAScheduleService/appsettings.json
+++ b/REAScheduleService/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Prod;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
