--- a/TelegramBotAPI/Properties/launchSettings.json
+++ b/TelegramBotAPI/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "TelegramBotService": {
+    "TelegramBotAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
