--- a/TelegramBotAPI/appsettings.json
+++ b/TelegramBotAPI/appsettings.json
@@ -10,9 +10,12 @@
     "BotToken": "5491712558:AAEZtkL5uiBKrms_kffCf4RxGaJipOuAg5M",
     "HostAddress": "https://reatelebot.mrimbolo.me"
   },
-  
+
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=rogEvotoZ1002;Database=ReaTelebotDb.Prod;"
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Dev;"
+  },
+  "ChromiumPaths": {
+    "DefaultChromium": "C:\\inetpub\\wwwroot\\REATelegramAPI\\.local-chromium\\Win64-970485\\chrome-win\\chrome.exe"
   }
 
 }
