--- a/ScheduleWorker/appsettings.Development.json
+++ b/ScheduleWorker/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=rogEvotoZ1002;Database=ReaSchedule.dev;"
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Dev;"
   },
   "Logging": {
     "LogLevel": {
