--- a/ScheduleWorker/appsettings.json
+++ b/ScheduleWorker/appsettings.json
@@ -1,11 +1,15 @@
 {
-  "ConnectionString": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=rogEvotoZ1002;Database=ReaSchedule.dev;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Dev;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ChromiumPaths": {
+    "DefaultChromium": "C:\\inetpub\\wwwroot\\REATelegramAPI\\.local-chromium\\Win64-970485\\chrome-win\\chrome.exe"
   }
+
 }
