--- a/TelegramBotAPI/appsettings.Development.json
+++ b/TelegramBotAPI/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=rogEvotoZ1002;Database=ReaTelebotDb.Dev;"
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Dev;"
   }
+
 }
