--- a/ScheduleUpdateService/ScheduleUpdateService.csproj
+++ b/ScheduleUpdateService/ScheduleUpdateService.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <PackageReference Include="Humanizer.Core.ru" Version="2.14.1" />
     <PackageReference Include="PuppeteerSharp" Version="7.1.0" />
     <PackageReference Include="XAct.Core.PCL" Version="0.0.5014" />
   </ItemGroup>
