--- a/ScheduleWorker/ScheduleWorker.csproj
+++ b/ScheduleWorker/ScheduleWorker.csproj
@@ -15,6 +15,10 @@
 
     <PackageReference Include="Coravel" Version="4.2.0" />
 
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+
+    <PackageReference Include="Humanizer.Core.ru" Version="2.14.1" />
+
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.8">
       <PrivateAssets>all</PrivateAssets>
