--- a/ScheduledActivities/ScheduledActivities.csproj
+++ b/ScheduledActivities/ScheduledActivities.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Coravel" Version="4.2.0" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <PackageReference Include="Humanizer.Core.ru" Version="2.14.1" />
   </ItemGroup>
 
   <ItemGroup>
