--- a/TelegramBotAPI/TelegramBotAPI.csproj
+++ b/TelegramBotAPI/TelegramBotAPI.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Coravel" Version="4.2.0" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <PackageReference Include="Humanizer.Core.ru" Version="2.14.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
