--- a/TelegramBotService/TelegramBotService.csproj
+++ b/TelegramBotService/TelegramBotService.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Coravel" Version="4.2.0" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <PackageReference Include="Humanizer.Core.ru" Version="2.14.1" />
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
   </ItemGroup>
 
