--- a/TelegramBotService/TelegramBotService.csproj
+++ b/TelegramBotService/TelegramBotService.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Humanizer.Core.ru" Version="2.14.1" />
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
+    <PackageReference Include="TelegramEmoji" Version="1.17.0" />
   </ItemGroup>
 
   <ItemGroup>
