TelegramBot: refactoring of everthing regarding subscription: 1. added SubscriptionSettings model 2. added new options for subscription, added corresponding keyboards and commands 3. Added new static storage for storing callbacks and actions 4. Added new formatter for formatting settings 5. Added new jobs for scheduling

--- a/ScheduledActivities/ScheduledActivities.csproj
+++ b/ScheduledActivities/ScheduledActivities.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ReaSchedule.DAL\ReaSchedule.DAL.csproj" />
     <ProjectReference Include="..\ScheduleUpdateService\ScheduleUpdateService.csproj" />
+    <ProjectReference Include="..\TelegramBotService\TelegramBotService.csproj" />
   </ItemGroup>
 
 </Project>
