--- a/TelegramBotAPI/TelegramBotAPI.csproj
+++ b/TelegramBotAPI/TelegramBotAPI.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ReaSchedule.DAL\ReaSchedule.DAL.csproj" />
+    <ProjectReference Include="..\ScheduledActivities\ScheduledActivities.csproj" />
     <ProjectReference Include="..\ScheduleUpdateService\ScheduleUpdateService.csproj" />
     <ProjectReference Include="..\TelegramBotService\TelegramBotService.csproj" />
   </ItemGroup>
