Some changes were made. But there is an issue with Coravel methods.

--- a/TelegramBotAPI/appsettings.Development.json
+++ b/TelegramBotAPI/appsettings.Development.json
@@ -7,7 +7,13 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Dev;"
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Dev;",
+    "SQLServerExpress": "Server=VMI1091056\\SQLEXPRESS;Database=ReaSchedule.dev;User Id=ReaSchedule;Password=ftGYnrspRoxOlRlXnw_FaP6TaKzDAaNP;Trust Server Certificate=true;"
+  },
+
+  "BotConfiguration": {
+    "BotToken": "5896607926:AAEhfo9uekgvOPr58AVoPZL8qXymLnjo3Z8",
+    "HostAddress": "https://reatelebotdev.mrimbolo.me"
   }
 
 }
