--- a/TelegramBotAPI/appsettings.json
+++ b/TelegramBotAPI/appsettings.json
@@ -12,13 +12,15 @@
     }
   },
   "AllowedHosts": "*",
+
   "BotConfiguration": {
     "BotToken": "5491712558:AAEZtkL5uiBKrms_kffCf4RxGaJipOuAg5M",
     "HostAddress": "https://reatelebot.mrimbolo.me"
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Dev;"
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Prod;",
+    "SQLServerExpress": "Server=VMI1091056\\SQLEXPRESS;Database=ReaSchedule.prod;User Id=ReaSchedule;Password=ftGYnrspRoxOlRlXnw_FaP6TaKzDAaNP;Trust Server Certificate=true;"
   },
   "ChromiumPaths": {
     "DefaultChromium": "C:\\inetpub\\wwwroot\\REATelegramAPI\\.local-chromium\\Win64-970485\\chrome-win\\chrome.exe"
