Major project upgrade. - Added different environments - Moved db from postgres to sql server express - Fixed bug when BrowserWrapper tried to create multiple browsers - Added ChromiumKiller service - Added Unit Test for DateTimeExtension class methods - Fixed many minor bugs

--- a/.gitignore
+++ b/.gitignore
@@ -447,3 +447,6 @@ FodyWeavers.xsd
 /.local-chromiums/chrome-win/locales/ar.pak
 /.local-chromiums/chrome-win/locales/ar-XB.pak
 /.local-chromiums/chrome-win/locales/am.pak
+/ChromiumKiller
+/TelegramBotAPI/Middlewares
+/JoinedSchedule.sql
