--- a/TelegramBotAPI/appsettings.Development.json
+++ b/TelegramBotAPI/appsettings.Development.json
@@ -7,13 +7,16 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Password=m'Un,CaL3?KD1APa3egCesnck$C!:mgr;Database=ReaTelebotDb.Dev;",
-    "SQLServerExpress": "Server=VMI1091056\\SQLEXPRESS;Database=ReaSchedule.dev;User Id=ReaSchedule;Password=ftGYnrspRoxOlRlXnw_FaP6TaKzDAaNP;Trust Server Certificate=true;"
+    "SQLServerExpress": "connectionString"
   },
 
   "BotConfiguration": {
-    "BotToken": "5896607926:AAEhfo9uekgvOPr58AVoPZL8qXymLnjo3Z8",
-    "HostAddress": "https://reatelebotdev.mrimbolo.me"
+    "BotToken": "token",
+    "HostAddress": "url"
+  },
+
+  "ChromiumPaths": {
+    "DefaultChromium": "path"
   }
 
 }
