--- a/TelegramBotAPI/TelegramBotAPI.csproj
+++ b/TelegramBotAPI/TelegramBotAPI.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\FluentCommandHandler\FluentCommandHandler\FluentCommandHandler.csproj" />
     <ProjectReference Include="..\ReaSchedule.DAL\ReaSchedule.DAL.csproj" />
     <ProjectReference Include="..\ScheduledActivities\ScheduledActivities.csproj" />
     <ProjectReference Include="..\ScheduleUpdateService\ScheduleUpdateService.csproj" />
