- Solved a bug with migrations - Added serilog with configuration - Added serilogs to Scheduled Tasks - Reworked BrowserWrapper slightly

--- a/TelegramBotAPI/appsettings.json
+++ b/TelegramBotAPI/appsettings.json
@@ -1,16 +1,90 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.EventLog",
+      "Serilog.Sinks.Debug",
+      "Serilog.Sinks.MSSqlServer"
+    ],
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Microsoft": "Warning",
       "Microsoft.AspNetCore": "Warning"
     },
-    "EventLog": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
+    "WriteTo": [
+      {
+        "Name": "EventLog",
+        "Args": {
+          "source": "DevSource",
+          "outputTemplate": "  [{Level}] TreadId: {ThreadId} {Message} {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Debug"
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "SQLServerExpress",
+          "sinkOptionsSection": {
+            "tableName": "APILogs",
+            "schemaName": "dbo",
+            "autoCreateSqlTable": true,
+            "batchPostingLimit": 100,
+            "period": "0.00:00:30"
+          },
+          "restrictedToMinimumLevel": "Information",
+          "columnOptionsSection": {
+            "disableTriggers": true,
+            "clusteredColumnstoreIndex": false,
+            "id": { "nonClusteredIndex": true },
+            "level": {
+              "columnName": "Level",
+              "storeAsEnum": false
+            },
+            "properties": {
+              "columnName": "Properties",
+              "excludeAdditionalProperties": true,
+              "dictionaryElementName": "dict",
+              "itemElementName": "item",
+              "omitDictionaryContainerElement": false,
+              "omitSequenceContainerElement": false,
+              "omitStructureContainerElement": false,
+              "omitElementIfEmpty": true,
+              "propertyElementName": "prop",
+              "rootElementName": "root",
+              "sequenceElementName": "seq",
+              "structureElementName": "struct",
+              "usePropertyKeyAsElementName": false
+            },
+            "timeStamp": {
+              "columnName": "DateTime",
+              "convertToUtc": false
+            },
+            "message": { "columnName": "Message" },
+            "exception": { "columnName": "Exception" },
+            "messageTemplate": { "columnName": "Template" }
+          }
+        }
       }
-    }
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId" ],
+    "Destructure": [
+      {
+        "Name": "ToMaximumDepth",
+        "Args": { "maximumDestructuringDepth": 4 }
+      },
+      {
+        "Name": "ToMaximumStringLength",
+        "Args": { "maximumStringLength": 100 }
+      },
+      {
+        "Name": "ToMaximumCollectionCount",
+        "Args": { "maximumCollectionCount": 10 }
+      }
+    ]
+
   },
+
   "AllowedHosts": "*",
 
   "BotConfiguration": {
