--- a/ScheduledActivities/ScheduledActivities.csproj
+++ b/ScheduledActivities/ScheduledActivities.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Coravel" Version="4.2.0" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Humanizer.Core.ru" Version="2.14.1" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.2.0" />
   </ItemGroup>
 
   <ItemGroup>
