--- a/TelegramBotAPI/TelegramBotAPI.csproj
+++ b/TelegramBotAPI/TelegramBotAPI.csproj
@@ -1,5 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+  <PropertyGroup>
+	<AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+  </PropertyGroup>
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -65,6 +67,14 @@
   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 </PackageReference>
 <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+<PackageReference Include="Serilog" Version="2.12.0" />
+<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+<PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+<PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
+<PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+<PackageReference Include="Serilog.Sinks.EventLog" Version="3.1.0" />
+<PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -104,5 +114,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="https://appliedengdesign.github.io/cnccodes-json-schema/draft/2022-07/schema" /></VisualStudio></ProjectExtensions>
 
 </Project>
