Deleted all the artifacts. Re-added FluentCommandHandler project

--- a/TelegramBotAPI/web.config
+++ b/TelegramBotAPI/web.config
@@ -5,7 +5,7 @@
 			<handlers>
 				<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
 			</handlers>
-			<aspNetCore processPath="dotnet" arguments=".\TelegramBotAPI.dll --environment Production" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+			<aspNetCore processPath="dotnet" arguments=".\TelegramBotAPI.dll --environment Development" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
 		</system.webServer>
 	</location>
 </configuration>
